--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
+<h3>Maximilian Wittmer</h3>
+<h4>Mathematics, music, computer science, structure and art</h4>
 
+<a href="/music/">My music projects</a>
