--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <h3>Maximilian Wittmer</h3>
 <h4>Mathematics, music, computer science, structure and art</h4>
 
-<a href="/music/">My music projects</a>
+<details>
+  <summary>Music</summary>
+  <p>
+    
+  </p>
+</details>
+
+
